// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Text Snapshot added optional style inline prop 1`] = `
<p
  className="jsx-1777155260"
  style={
    Object {
      "lineHeight": 2,
      "marginTop": 30,
    }
  }
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot primary color of the theme 1`] = `
<p
  className="jsx-3016568310"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot secondary font-family of the theme 1`] = `
<p
  className="jsx-664054977"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot use align prop with value right 1`] = `
<p
  className="jsx-2687627385"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot use gutterBottom prop 1`] = `
<p
  className="jsx-1777155260"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot use gutterBottom prop and secondary color 1`] = `
<p
  className="jsx-3932295889"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot use gutterBottom prop and secondary font 1`] = `
<p
  className="jsx-664054977"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot use gutterBottom prop, secondary font and align 1`] = `
<p
  className="jsx-3491589124"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot without arguments, take the default values, use childreen prop 1`] = `
<p
  className="jsx-1777155260"
  style={Object {}}
>
  This is a component Text!
</p>
`;
